k8s/3/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: product-api.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8080
    - host: my-shopping-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-shopping-app
                port:
                  number: 80
