k8s/3/product-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: product-api.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8080
